# FastAblationSystem

./: .gitignore  ACSCL_x64.LIB  ACSCL_x86.LIB  CMakeLists.txt  FastAblationNew.sln  FastAblationNew.vcxproj  FastAblationNew.vcxproj.filters  GalvoControl.cpp  GalvoControl.h  LaserControl.h  MetalMesh.cpp  MetalMesh.h  StageControl.cpp  StageControl.h  confocal_offsets.txt  previous_focus_depth.txt  run.sh
DAQ/: CMakeLists.txt  DAQControl.cpp  DAQControl.h  README.md
include/: ACSC.h  CHRocodileLib.h  CHRocodileLibErrorDef.h  CHRocodileLibPluginDef.h  CHRocodileLibSpecialFunc.h  cbw.h  daqhats.h  daqhats_utils.h  makefile  mcc118.h  mcc128.h  mcc134.h  mcc152.h  mcc172.h
lib/: CHRocodile.lib  cbw32.lib
src/: ConfocalControl.cpp  ConfocalControl.h  ConfocalWrapper.cpp  ConfocalWrapper.h  DAQControl.cpp  DAQControl.h  DataReciever.cpp  DataReciever.h  FastAblationNew.cpp  GalvoControl.cpp  GalvoControl.h  KeyboardControl.h  LaserControl.cpp  LaserControl.h  StageControl.cpp  StageControl.h
x64/Debug/: FastAblationNew.exe.recipe  FastAblationNew.ilk  FastAblationNew.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/FastAblationNew.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FastAblationNew.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
